--- a/PreferenceManager.Domain/PreferenceManager.Domain.csproj
+++ b/PreferenceManager.Domain/PreferenceManager.Domain.csproj
@@ -1,12 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Folder Include="Common" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Aggregator" Version="3.1.1" />
