--- a/PreferenceManager.UseCase/PreferenceManager.UseCase.csproj
+++ b/PreferenceManager.UseCase/PreferenceManager.UseCase.csproj
@@ -1,16 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Aggregator" Version="3.1.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\PreferenceManager.Domain\PreferenceManager.Domain.csproj" />
+      <ProjectReference Include="..\PreferenceManager.Infrastructure\PreferenceManager.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
