Add Universal and Solution preference functionality

--- a/PreferenceManager.API/appsettings.json
+++ b/PreferenceManager.API/appsettings.json
@@ -7,8 +7,14 @@
   },
   "Auth0": {
     "Domain": "dev-e-qncau0.us.auth0.com",
-    "Audience": "http://localhost/preference-manager",
+    "Audience": "http://localhost/preference-manager"
   },
   "SwaggerUISecurityMode": "oauth2",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost:5432;Database=pm-db-local;Username=preference-manager;Password=preference-manager-pass"
+  },
+  "CacheSettings": {
+    "ConnectionString": "localhost:6379"
+  }
 }
