--- a/PreferenceManager.Infrastructure/PreferenceManager.Infrastructure.csproj
+++ b/PreferenceManager.Infrastructure/PreferenceManager.Infrastructure.csproj
@@ -7,22 +7,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Aggregator" Version="3.1.1" />
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
+        <PackageReference Include="Aggregator" Version="3.1.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.8" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PreferenceManager.Domain\PreferenceManager.Domain.csproj" />
+        <ProjectReference Include="..\PreferenceManager.Domain\PreferenceManager.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Cache" />
-      <Folder Include="DAL" />
     </ItemGroup>
 
 </Project>
