--- a/PreferenceManager.IntegrationTests/PreferenceManager.IntegrationTests.csproj
+++ b/PreferenceManager.IntegrationTests/PreferenceManager.IntegrationTests.csproj
@@ -22,4 +22,9 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\PreferenceManager.Domain\PreferenceManager.Domain.csproj" />
+      <ProjectReference Include="..\PreferenceManager.Infrastructure\PreferenceManager.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
