- Add redis cache for performance optimisation - Design structure of the full api - Improve documentation

--- a/PreferenceManager.API/appsettings.json
+++ b/PreferenceManager.API/appsettings.json
@@ -14,7 +14,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost:5432;Database=pm-db-local;Username=preference-manager;Password=preference-manager-pass"
   },
-  "CacheSettings": {
-    "ConnectionString": "localhost:6379"
-  }
+  "RedisCacheUrl": "localhost:6379"
 }
