--- a/PreferenceManager.API/Dockerfile
+++ b/PreferenceManager.API/Dockerfile
@@ -5,16 +5,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["PreferenceManager/PreferenceManager.csproj", "PreferenceManager/"]
-RUN dotnet restore "PreferenceManager/PreferenceManager.csproj"
+COPY ["PreferenceManager.API/PreferenceManager.API.csproj", "PreferenceManager/"]
+RUN dotnet restore "PreferenceManager.API/PreferenceManager.API.csproj"
 COPY . .
-WORKDIR "/src/PreferenceManager"
-RUN dotnet build "PreferenceManager.csproj" -c Release -o /app/build
+WORKDIR "/src/PreferenceManager.API"
+RUN dotnet build "PreferenceManager.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "PreferenceManager.csproj" -c Release -o /app/publish
+RUN dotnet publish "PreferenceManager.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "PreferenceManager.dll"]
+ENTRYPOINT ["dotnet", "preferencemanager.dll"]
