--- a/PreferenceManager.API/PreferenceManager.API.csproj
+++ b/PreferenceManager.API/PreferenceManager.API.csproj
@@ -11,7 +11,9 @@
     <ItemGroup>
         <PackageReference Include="Aggregator" Version="3.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.8" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
+        <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
