--- a/PreferenceManager.Domain/PreferenceManager.Domain.csproj
+++ b/PreferenceManager.Domain/PreferenceManager.Domain.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Aggregator" Version="3.1.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+      <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
     </ItemGroup>
 
     <ItemGroup>
