--- a/PreferenceManager.IntegrationTests/PreferenceManager.IntegrationTests.csproj
+++ b/PreferenceManager.IntegrationTests/PreferenceManager.IntegrationTests.csproj
@@ -10,7 +10,9 @@
     <ItemGroup>
         <PackageReference Include="Aggregator" Version="3.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.8" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+        <PackageReference Include="StackExchange.Redis" Version="2.6.48" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
