--- a/PreferenceManager.UseCase/PreferenceManager.UseCase.csproj
+++ b/PreferenceManager.UseCase/PreferenceManager.UseCase.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Aggregator" Version="3.1.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+      <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     </ItemGroup>
 
     <ItemGroup>
