--- a/docker/docker.csproj
+++ b/docker/docker.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="Aggregator" Version="3.1.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.8" />
     </ItemGroup>
 
 </Project>
